# dtv-cli

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.1b57a1e  CMakeSettings.json  INSTALL.md  README.md  README_RU.md  changelog  command.h  command_line_parser.cpp  command_line_parser.h  downloader.cpp  downloader.h  fs_directories.cpp  fs_directories.h  interface.cpp  interface.h  main.cpp  presentation.cpp  presentation.h
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  macos.yml  ubuntu-cpp.yml  ubuntu.yml  windows.yml
cmake/: CheckCompiler.cmake  CheckDepedencies.cmake  CheckDir.cmake  FindBoost.cmake  FindFMT.cmake  FindYtDlp.cmake  RunCheckTest.cmake
src/: CMakeLists.txt  command_line_parser.cpp  commandline.cpp  commandline.h  dataloader.cpp  dataloader.h  debug.h  downloader.cpp  downloader.h  downloadingmedia.cpp  downloadingmedia.h  engine.cpp  engine.h  extractor.cpp  extractor.h  formater.cpp  formater.h  fs_directories.cpp  fs_directories.h  helper.h  main.cpp  mergevideofile.cpp  mergevideofile.h  presentation.cpp  presentation.h  version.cpp.in  video.cpp  video.h  videosource.cpp  videosource.h
src/command/: CMakeLists.txt  command_line_parser.cpp  command_line_parser.h  commandline.cpp  commandline.h
src/command_line_parser/: CMakeLists.txt  command_line_parser.cpp  command_line_parser.h
src/download/: CMakeLists.txt  dataloader.cpp  dataloader.h  downloader.cpp  downloader.h  downloadingmedia.cpp  downloadingmedia.h  readjson.cpp  readjson.h
src/dtv/: CMakeLists.txt  main.cpp
src/dtv/commandline/: CMakeLists.txt  commandline.cpp  commandline_parser.cpp  fs.cpp
src/dtv/commandline/include/: fs.h
src/dtv/commandline/include/commandline/: commandline.h  commandline_parser.h
src/dtv/debug/: CMakeLists.txt
src/dtv/debug/include/: debug.h
src/dtv/downloader/: CMakeLists.txt  downloader.cpp
src/dtv/downloader/include/: downloader.h
src/dtv/engine/: CMakeLists.txt  engine.cpp
src/dtv/engine/include/: engine.h
src/dtv/extractor/: CMakeLists.txt  extractor.cpp
src/dtv/extractor/include/: extractor.h
src/dtv/formater/: CMakeLists.txt  formater.cpp
src/dtv/formater/include/: formater.h
src/dtv/include/: debug.h  helper.h
src/dtv/test_output/: main.cpp
src/dtv/version/: CMakeLists.txt
src/dtv/version/include/: version.h
src/dtv/video/: CMakeLists.txt
src/dtv/video/include/: video.h
src/fs/: CMakeLists.txt  fs_directories.cpp  fs_directories.h
src/interface/: CMakeLists.txt  interface.cpp  interface.h  video.cpp  video.h  videoninegag.cpp  videoninegag.h  videovimeo.cpp  videovimeo.h  videoyoutube.cpp  videoyoutube.h
src/jsondata/: CMakeLists.txt  jsondata.cpp  jsondata.h
src/merge/: CMakeLists.txt  mergevideofile.cpp  mergevideofile.h
src/presentation/: CMakeLists.txt  presentation.cpp  presentation.h
src/video/: CMakeLists.txt  extractor.cpp  video.cpp  video.h
test/: CMakeLists.txt  tst_changetempdir.cpp  tst_extractor.cpp  urls
test/dtv/: tst_changetempdir.cpp  tst_initfs.cpp
test/dtv/jsons/: 65e9a781a3977__PornHub__NA__.info.json  7040865539949956353__TikTok__birthday June_6th.info.json  78529224_14269__MailRu__NA__.info.json  KIWR9Pdt7O0__Youtube__HistoryLegends__.info.json
test/jsons/: -106879986_456256058__VK__NA__.info.json  -197178980_456239124__VK__NA__.info.json  -215360893_456239107__VK__NA__.info.json  3jMTHkawNGo__Youtube__Holiday weeks__.info.json  3jMTHkawNGo__Youtube__Holiday_weeks__.info.json  65e9a781a3977__PornHub__NA__.info.json  7024211316860620033__TikTok__Kika Kim__.info.json  7040865539949956353__TikTok__birthday June_6th.info.json  7043048776034028802__TikTok__Yan__.info.json  78529224_14269__MailRu__NA__.info.json  78609180_14254__MailRu__NA__.info.json  952597318__Vimeo__NA__.info.json  BV1dw4m1i7JJ__BiliBili__NA__.info.json  KIWR9Pdt7O0__Youtube__HistoryLegends__.info.json  Lithuania__NineGag__.json  _-_-_-___Generic__NA__.info.json  __2bjWbetsA__Youtube__Sony Pictures Entertainment__.info.json  b4e43e911ef2c56f514501041fe46ecf__Rutube__NA__.info.json  bsgzvEVEeRU__Youtube__LDPR-TV__.info.json  v2163310012__TwitchVod__NA__.info.json  video_ext__Generic__NA__.info.json  yBOxxobkzvY__Youtube__Verden TV__.info.json
tests/dtv/: CMakeLists.txt  tst_changetempdir.cpp  tst_extractor.cpp  tst_initfs.cpp
tests/dtv/jsons/: -197178980_456239124__VK__NA__.info.json  7024211316860620033__TikTok__Kika Kim__.info.json  7043048776034028802__TikTok__Yan__.info.json  78609180_14254__MailRu__NA__.info.json  _-_-_-___Generic__NA__.info.json  b4e43e911ef2c56f514501041fe46ecf__Rutube__NA__.info.json  v2163310012__TwitchVod__NA__.info.json
